--- a/app/globals.css
+++ b/app/globals.css
@@ -4,123 +4,110 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0 0 0);
-  --card: oklch(0.9821 0 0);
-  --card-foreground: oklch(0.2178 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.2178 0 0);
-  --primary: oklch(0.6048 0.2166 257.2136);
+  --background: oklch(0.9821 0 0);
+  --foreground: oklch(0.2435 0 0);
+  --card: oklch(0.9911 0 0);
+  --card-foreground: oklch(0.2435 0 0);
+  --popover: oklch(0.9911 0 0);
+  --popover-foreground: oklch(0.2435 0 0);
+  --primary: oklch(0.4341 0.0392 41.9938);
   --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.5575 0.0165 244.8933);
-  --secondary-foreground: oklch(1 0 0);
-  --muted: oklch(0.9612 0 0);
-  --muted-foreground: oklch(0.5103 0 0);
-  --accent: oklch(0.9417 0.0052 247.879);
-  --accent-foreground: oklch(0.3211 0 0);
-  --destructive: oklch(0.5915 0.202 21.2388);
+  --secondary: oklch(0.92 0.0651 74.3695);
+  --secondary-foreground: oklch(0.3499 0.0685 40.8288);
+  --muted: oklch(0.9521 0 0);
+  --muted-foreground: oklch(0.5032 0 0);
+  --accent: oklch(0.931 0 0);
+  --accent-foreground: oklch(0.2435 0 0);
+  --destructive: oklch(0.6271 0.1936 33.339);
   --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.9067 0 0);
-  --input: oklch(1 0 0);
-  --ring: oklch(0.828 0.0898 248.9586);
-  --chart-1: oklch(0.5854 0.2041 277.1173);
-  --chart-2: oklch(0.6268 0.2325 303.9004);
-  --chart-3: oklch(0.6559 0.2118 354.3084);
-  --chart-4: oklch(0.7049 0.1867 47.6044);
-  --chart-5: oklch(0.7227 0.192 149.5793);
-  --sidebar: oklch(0.9816 0.0017 247.839);
-  --sidebar-foreground: oklch(0.2621 0.0095 248.1897);
-  --sidebar-primary: oklch(0.6048 0.2166 257.2136);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.9417 0.0052 247.879);
-  --sidebar-accent-foreground: oklch(0.3211 0 0);
-  --sidebar-border: oklch(0.9109 0.007 247.9014);
-  --sidebar-ring: oklch(0.828 0.0898 248.9586);
-  --font-sans: ui-sans-serif, system-ui, sans-serif;
+  --border: oklch(0.8822 0 0);
+  --input: oklch(0.8822 0 0);
+  --ring: oklch(0.4341 0.0392 41.9938);
+  --chart-1: oklch(0.4341 0.0392 41.9938);
+  --chart-2: oklch(0.92 0.0651 74.3695);
+  --chart-3: oklch(0.931 0 0);
+  --chart-4: oklch(0.9367 0.0523 75.5009);
+  --chart-5: oklch(0.4338 0.0437 41.6746);
+  --sidebar: oklch(0.9881 0 0);
+  --sidebar-foreground: oklch(0.2645 0 0);
+  --sidebar-primary: oklch(0.325 0 0);
+  --sidebar-primary-foreground: oklch(0.9881 0 0);
+  --sidebar-accent: oklch(0.9761 0 0);
+  --sidebar-accent-foreground: oklch(0.325 0 0);
+  --sidebar-border: oklch(0.9401 0 0);
+  --sidebar-ring: oklch(0.7731 0 0);
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
   --radius: 0.5rem;
   --shadow-x: 0;
-  --shadow-y: 0.125rem;
-  --shadow-blur: 0.25rem;
-  --shadow-spread: 0;
+  --shadow-y: 1px;
+  --shadow-blur: 3px;
+  --shadow-spread: 0px;
   --shadow-opacity: 0.1;
-  --shadow-color: #000000;
-  --shadow-2xs: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.05);
-  --shadow-xs: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.1),
+  --shadow-color: oklch(0 0 0);
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
     0 1px 2px -1px hsl(0 0% 0% / 0.1);
-  --shadow: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.1),
-    0 1px 2px -1px hsl(0 0% 0% / 0.1);
-  --shadow-md: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.1),
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
     0 2px 4px -1px hsl(0 0% 0% / 0.1);
-  --shadow-lg: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.1),
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
     0 4px 6px -1px hsl(0 0% 0% / 0.1);
-  --shadow-xl: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.1),
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.1),
     0 8px 10px -1px hsl(0 0% 0% / 0.1);
-  --shadow-2xl: 0 0.125rem 0.25rem 0 hsl(0 0% 0% / 0.25);
-  --tracking-normal: normal;
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --tracking-normal: 0em;
   --spacing: 0.25rem;
+  --shadow-offset-x: 0;
+  --shadow-offset-y: 1px;
+  --letter-spacing: 0em;
 }
 
-.dark {
-  --background: #0f172b;
-  --foreground: #0f172b;
-  --card: oklch(0.2284 0.0384 282.9324);
-  --card-foreground: oklch(0.9791 0 0);
-  --popover: oklch(0.2284 0.0384 282.9324);
-  --popover-foreground: oklch(0.9791 0 0);
-  --primary: oklch(0.6433 0.2037 288.3155);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.2996 0.052 282.8032);
-  --secondary-foreground: oklch(0.8699 0 0);
-  --muted: oklch(0.2996 0.052 282.8032);
-  --muted-foreground: oklch(0.7137 0.0347 285.4887);
-  --accent: oklch(0.2996 0.052 282.8032);
-  --accent-foreground: oklch(0.8699 0 0);
-  --destructive: oklch(0.6368 0.2078 25.3313);
+[data-theme="dark"] {
+  --background: oklch(0.1776 0 0);
+  --foreground: oklch(0.9491 0 0);
+  --card: oklch(0.2134 0 0);
+  --card-foreground: oklch(0.9491 0 0);
+  --popover: oklch(0.2134 0 0);
+  --popover-foreground: oklch(0.9491 0 0);
+  --primary: oklch(0.9247 0.0524 66.1732);
+  --primary-foreground: oklch(0.2029 0.024 200.1962);
+  --secondary: oklch(0.3163 0.019 63.6992);
+  --secondary-foreground: oklch(0.9247 0.0524 66.1732);
+  --muted: oklch(0.252 0 0);
+  --muted-foreground: oklch(0.7699 0 0);
+  --accent: oklch(0.285 0 0);
+  --accent-foreground: oklch(0.9491 0 0);
+  --destructive: oklch(0.6271 0.1936 33.339);
   --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.3377 0.0592 282.7654);
-  --input: oklch(0.2284 0.0384 282.9324);
-  --ring: oklch(0.6433 0.2037 288.3155);
-  --chart-1: oklch(0.6433 0.2037 288.3155);
-  --chart-2: oklch(0.5854 0.2041 277.1173);
-  --chart-3: oklch(0.6268 0.2325 303.9004);
-  --chart-4: oklch(0.6559 0.2118 354.3084);
-  --chart-5: oklch(0.7227 0.192 149.5793);
-  --sidebar: oklch(0.2284 0.0384 282.9324);
-  --sidebar-foreground: oklch(0.9791 0 0);
-  --sidebar-primary: oklch(0.6433 0.2037 288.3155);
+  --border: oklch(0.2351 0.0115 91.7467);
+  --input: oklch(0.4017 0 0);
+  --ring: oklch(0.9247 0.0524 66.1732);
+  --chart-1: oklch(0.9247 0.0524 66.1732);
+  --chart-2: oklch(0.3163 0.019 63.6992);
+  --chart-3: oklch(0.285 0 0);
+  --chart-4: oklch(0.3481 0.0219 67.0001);
+  --chart-5: oklch(0.9245 0.0533 67.0855);
+  --sidebar: oklch(0.2103 0.0059 285.8852);
+  --sidebar-foreground: oklch(0.9674 0.0013 286.3752);
+  --sidebar-primary: oklch(0.4882 0.2172 264.3763);
   --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.2996 0.052 282.8032);
-  --sidebar-accent-foreground: oklch(0.8699 0 0);
-  --sidebar-border: oklch(0.3377 0.0592 282.7654);
-  --sidebar-ring: oklch(0.6433 0.2037 288.3155);
-  --font-sans: Inter, ui-sans-serif, system-ui, sans-serif;
+  --sidebar-accent: oklch(0.2739 0.0055 286.0326);
+  --sidebar-accent-foreground: oklch(0.9674 0.0013 286.3752);
+  --sidebar-border: oklch(0.2739 0.0055 286.0326);
+  --sidebar-ring: oklch(0.8711 0.0055 286.286);
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
-  --radius: 0.75rem;
-  --shadow-x: 0;
-  --shadow-y: 0.5rem;
-  --shadow-blur: 1.5rem;
-  --shadow-spread: -0.25rem;
-  --shadow-opacity: 0.25;
-  --shadow-color: #000000;
-  --shadow-2xs: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.13);
-  --shadow-xs: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.13);
-  --shadow-sm: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.25),
-    0 1px 2px -1.25px hsl(0 0% 0% / 0.25);
-  --shadow: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.25),
-    0 1px 2px -1.25px hsl(0 0% 0% / 0.25);
-  --shadow-md: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.25),
-    0 2px 4px -1.25px hsl(0 0% 0% / 0.25);
-  --shadow-lg: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.25),
-    0 4px 6px -1.25px hsl(0 0% 0% / 0.25);
-  --shadow-xl: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.25),
-    0 8px 10px -1.25px hsl(0 0% 0% / 0.25);
-  --shadow-2xl: 0 0.5rem 1.5rem -0.25rem hsl(0 0% 0% / 0.63);
+  --radius: 0.5rem;
 }
 
 @theme inline {
@@ -157,9 +144,12 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
-  --font-serif: var(--font-serif);
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -174,42 +164,61 @@
   --shadow-lg: var(--shadow-lg);
   --shadow-xl: var(--shadow-xl);
   --shadow-2xl: var(--shadow-2xl);
-
+  --radius: 0.5rem;
   --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
   --tracking-tight: calc(var(--tracking-normal) - 0.025em);
-  --tracking-normal: var(--tracking-normal);
   --tracking-wide: calc(var(--tracking-normal) + 0.025em);
   --tracking-wider: calc(var(--tracking-normal) + 0.05em);
   --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
 }
 
-body {
-  letter-spacing: var(--tracking-normal);
-}
+/* Customization UI */
 
-/*Customization CSS STyle*/
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
+  }
+}
 
 @layer utilities {
-  .flexize {
-    @apply inline-flex items-center space-x-2;
+  .container-medium {
+    @apply md:max-w-[75%] md:mx-auto;
   }
 }
 
 @layer components {
   .primary-btn {
-    @apply rounded-full bg-linear-to-r from-slate-800 to-blue-600 text-white px-5 py-2.5 font-medium
-         hover:scale-105 transition-transform duration-300 ease-in-out;
+    @apply inline-block mt-8 px-8 py-3 rounded-lg bg-primary text-primary-foreground shadow hover:opacity-90 transition-all;
   }
+  .primary-btn {
+    @apply inline-block mt-8 px-8 py-3 rounded-lg bg-primary text-primary-foreground shadow hover:opacity-90 transition-all;
+  }
+}
 
-  .secondary-btn {
-    @apply bg-gray-600 text-white px-5 py-2.5 font-medium rounded-full;
+/* Sponsers Animation */
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
   }
+  100% {
+    transform: translateX(-50%);
+  }
+}
 
-  .mobile-menu {
-    @apply p-2 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors;
-  }
-
-  .container-medium {
-    @apply lg:max-w-[70%] lg:mx-auto;
-  }
+.animate-marquee {
+  display: flex;
+  animation: marquee 5s linear infinite;
 }
